added docs and types

--- a/test/index.html
+++ b/test/index.html
@@ -84,9 +84,8 @@
 					</tr>
 				</tbody>
 			</table>
-			<div data-js="b" data-text="Hello"></div>
 		</div>
-		<script src="../dist/iwd.js"></script>
+		<script src="../dist/iwd.umd.js"></script>
 		<script src="./app.js"></script>
 	</body>
 </html>
