added middleware support

--- a/test/index.html
+++ b/test/index.html
@@ -82,6 +82,12 @@
 							<span class="remove-all-handlers"></span>
 						</td>
 					</tr>
+					<tr>
+						<td>Middleware</td>
+						<td>
+							<span data-js="middleware"></span>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
